-Message queue system renamed to event queue.. Everything is now using this, except for vblank.
-Changes to Logging to show time(in ms) and line numbers.
-Buffer Percentage is updated at 6fps max now (this to not overtax main thread+event handler)
-Now clear metadata on stream stop (including buffer %).
-more internal refactoring...
0.35-pre5



0.34
-Corrected the mutex and semaphore implementations..
(Now logging needs more resources because of this though, so it's probably a good idea to keep high).
-Also found a bug that would cause the crash on exit (one at least).
(PSPSound's destructor was accessing the m_ThDecode without checkin if it existed first.)
-Also added USB support. Needs to be enabled in the config file. ([USB]ENABLED=1;)
-USB support is dangerous. Not recommended.
-Disabled pause for URL streams.
-Lots of internal refactoring.
-Support for playlists v2 was added.
-Now data from playlist v2 is shown, then updated when metadata arrives.
-Can force a profile now, look in the .cfg file to see how.
-Dropped the 'b' as is redundant with the -pre.
-Now when pressing L and R, the song only auto starts if the user was currently playing a song.
-Added thread exit synchronization using the semaphore. (Should help make sure the app exits correctly).
-Removed forced network profile code. (As users having problems where able to solve them themselves).
-Tweaked the playlist v2 support so that it (hopefully, test) works with winamp .pls files. (Now I just
ignore the "NumberOfEntries"/"numberofentries" tag.

0.33b
-Corrected logging, so that it won't double-line feed.
-Added connection timeout so that if the server is not respoding, PSPRadio will timeout after 5 seconds.
-The connection now sends a message (can and will be used for the gui) for now, a '.' is printed every second while trying to connect.
-New option in config file: WIFI-AUTOSTART if set to 0, then the user can select the WIFI profile from inside the app.