@@ -59,6 +59,7 @@
 	#define MID_PSPAPP_EXITING				0x01000000
 	#define MID_ONBUTTON_PRESSED			0x01000010
 	#define MID_ONBUTTON_RELEASED			0x01000011
+	#define MID_ONHPRM_RELEASED			0x01000012
 	#define MID_ONVBLANK					0x01000020
 	
 	
